tests/ui/implied-bounds/impl-implied-bounds-compatibility-unnormalized.stderr
error[E0803]: cannot infer an appropriate lifetime for lifetime parameter 's in generic type due to conflicting requirements
  --> $DIR/impl-implied-bounds-compatibility-unnormalized.rs:11:5
   |
LL |     fn get<'s>(s: &'s str, _: <&'static &'s () as Project>::Ty) -> &'static str {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime `'s` as defined here...
  --> $DIR/impl-implied-bounds-compatibility-unnormalized.rs:8:12
   |
LL |     fn get<'s>(s: &'s str, _: ()) -> &'static str;
   |            ^^
note: ...so that the method type is compatible with trait
  --> $DIR/impl-implied-bounds-compatibility-unnormalized.rs:11:5
   |
LL |     fn get<'s>(s: &'s str, _: <&'static &'s () as Project>::Ty) -> &'static str {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected `fn(&'s _, ()) -> &'static _`
              found `fn(&_, ()) -> &'static _`
   = note: but, the lifetime must be valid for the static lifetime...
note: ...so that the reference type `&'static &()` does not outlive the data it points at
  --> $DIR/impl-implied-bounds-compatibility-unnormalized.rs:11:5
   |
LL |     fn get<'s>(s: &'s str, _: <&'static &'s () as Project>::Ty) -> &'static str {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0803`.
